css/core-layout.css
/* ============================== */
/* ======== HEADER & NAV ======== */
/* ============================== */
.header__container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-block: var(--space-3);
    border-bottom: 0.0625rem solid var(--text15);
}

.logo {
    width: clamp(2.5rem, 1.071rem + 3.81vw, 4.5rem);
    display: flex;
    align-items: center;
    gap: var(--space-3);
}

.logo span {
    font-size: var(--h4);
}

.nav__btns {
    display: flex;
    align-items: center;
    gap: var(--space-2);
}

.nav__toggle,
#theme-toggle {
    font-size: var(--h5);
    cursor: pointer;
}

.nav {
    position: absolute;
    top: -100%;
    transform-origin: top;
    inset-inline: 0;
    opacity: 0;
    transition: 0.3s;
}

.show-menu {
    top: var(--header-height);
    opacity: 1;
}

.nav__list {
    padding: var(--space-4);
    z-index: 10;
    background-color: var(--primary);
    margin-inline: var(--space-4);
    border-radius: 0 0 var(--border-radius-2) var(--border-radius-2);
    text-align: center;
}

.nav__list li:not(:last-child)::after {
    display: block;
    content: '';
    height: 0.0625rem;
    margin-block: var(--space-2);
    background-color: var(--bg);
}

.nav__list a {
    color: var(--bg);
}

/* ============================== */
/* =========== FOOTER =========== */
/* ============================== */
footer {
    margin-top: auto;
}

.footer__container {
    display: flex;
    flex-direction: column;
    color: var(--text70);
    text-align: center;
    padding-block: var(--space-3);
    border-top: 0.0625rem solid var(--text15);
}

